bon/tests/integration/ui/compile_fail/attr_const.stderr
error: #[builder(const)] requires the underlying function to be marked as `const fn`
 --> tests/integration/ui/compile_fail/attr_const.rs:3:11
  |
3 | #[builder(const)]
  |           ^^^^^

error: #[builder(const)] requires the underlying function to be marked as `const fn`
  --> tests/integration/ui/compile_fail/attr_const.rs:10:15
   |
10 |     #[builder(const)]
   |               ^^^^^

error: bare #[builder(default)] is incompatible with #[builder(const)] because Default::default() can not be called in const context; provide an explicit default value via #[builder(default = ...)] instead
  --> tests/integration/ui/compile_fail/attr_const.rs:17:15
   |
17 |     #[builder(default)]
   |               ^^^^^^^

error: bare #[builder(skip)] is incompatible with #[builder(const)] because Default::default() can not be called in const context; provide an explicit initial value via #[builder(skip = ...)] instead
  --> tests/integration/ui/compile_fail/attr_const.rs:24:15
   |
24 |     #[builder(skip)]
   |               ^^^^

error: this kind of expression is not allowed in this position; if you need to use a complex expression such as this then move it into a separate `const fn` and call that function here instead
  --> tests/integration/ui/compile_fail/attr_const.rs:31:25
   |
31 |     #[builder(default = return 1)]
   |                         ^^^^^^
